force-app/main/default/objects/Sales_Lead__c/Sales_Lead__c.object-meta.xml
<CustomObject>
    <description
  >This is a custom lead object used primarily for handing incoming &quot;Contact us&quot; requests as well as Marketing Qualified Leads.</description>
    <label>Activity Alert</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Activity Alert</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>