force-app/main/default/objects/Sales_Lead__c/fields/Acc_Con__c.field-meta.xml
<CustomField>
    <fullName>Acc_Con__c</fullName>
    <formula
  >IF(Account_No_MQLs__c=TRUE,&quot;1&quot;,&quot;0&quot;) &amp; &quot;|&quot; &amp;
IF(Contact_No_MQLs__c=TRUE,&quot;1&quot;,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc | Con</label>
    <type>Text</type>
</CustomField>