force-app/main/default/objects/Sales_Lead__c/fields/Account_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Activity__c</fullName>
    <formula>Contact__r.Account.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Activity</label>
    <type>Date</type>
</CustomField>