force-app/main/default/objects/Sales_Lead__c/fields/Account_No_MQLs__c.field-meta.xml
<CustomField>
    <fullName>Account_No_MQLs__c</fullName>
    <formula>Contact__r.Account.No_MQLs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account: No Activity Alerts</label>
    <type>Checkbox</type>
</CustomField>