force-app/main/default/objects/Sales_Lead__c/fields/Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Name__c</fullName>
    <formula
  >HYPERLINK(&quot;/&quot;&amp;Contact__r.AccountId, LEFT(Account_Name__c,10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Name</label>
    <type>Text</type>
</CustomField>