force-app/main/default/objects/Sales_Lead__c/fields/Added_to_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Campaigns__c</fullName>
    <label>Added to Campaigns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>