force-app/main/default/objects/Sales_Lead__c/fields/Behavior_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Score__c</fullName>
    <label>Behavior Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>