force-app/main/default/objects/Sales_Lead__c/fields/Brand_Score_EM__c.field-meta.xml
<CustomField>
    <fullName>Brand_Score_EM__c</fullName>
    <label>Brand Score - EM</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>