force-app/main/default/objects/Sales_Lead__c/fields/CMS__c.field-meta.xml
<CustomField>
    <fullName>CMS__c</fullName>
    <formula
  >HYPERLINK(&quot;http://cms.erepublic.com/common/analytics/contact/&quot;&amp; Contact__r.Id&amp;&quot;?sfuser=&quot;&amp; $User.Id  , &quot;View Contact Analytics&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMS Contact Link</label>
    <type>Text</type>
</CustomField>