force-app/main/default/objects/Sales_Lead__c/fields/CMS_Link__c.field-meta.xml
<CustomField>
    <fullName>CMS_Link__c</fullName>
    <formula
  >HYPERLINK(&quot;http://cms.erepublic.com/common/leads/lead_targets/#/list/Activity-Alerts/&quot;&amp; Id , &quot;View Activity Alert&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMS Alert Link</label>
    <type>Text</type>
</CustomField>