force-app/main/default/objects/Sales_Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The contact record that is associated with this lead.</description>
    <inlineHelpText
  >The contact record that is associated with this lead.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Lead2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>