force-app/main/default/objects/Sales_Lead__c/fields/Contact_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity__c</fullName>
    <formula>Contact__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Activity</label>
    <type>Date</type>
</CustomField>