force-app/main/default/objects/Sales_Lead__c/fields/Contact_No_MQLs__c.field-meta.xml
<CustomField>
    <fullName>Contact_No_MQLs__c</fullName>
    <formula>Contact__r.No_MQLs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: No Activity Alerts</label>
    <type>Checkbox</type>
</CustomField>