force-app/main/default/objects/Sales_Lead__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <description
  >Shows if the contact has any activity since being identified as an MQL.</description>
    <formula>Contact_Last_Activity__c  &gt;=  Lead_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows if the contact has any activity since being identified as an MQL.</inlineHelpText>
    <label>Contacted</label>
    <type>Checkbox</type>
</CustomField>