force-app/main/default/objects/Sales_Lead__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <formula>ISPICKVAL( Lead_Status__c, &quot;Converted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>