force-app/main/default/objects/Sales_Lead__c/fields/Converted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date_Time__c</fullName>
    <label>Converted Date / Time</label>
    <type>DateTime</type>
</CustomField>