force-app/main/default/objects/Sales_Lead__c/fields/Demo_Score__c.field-meta.xml
<CustomField>
    <fullName>Demo_Score__c</fullName>
    <label>Demo Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>