force-app/main/default/objects/Sales_Lead__c/fields/DEN_Target__c.field-meta.xml
<CustomField>
    <fullName>DEN_Target__c</fullName>
    <formula>Contact__r.Account.Target_DEN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Target</label>
    <type>Checkbox</type>
</CustomField>