force-app/main/default/objects/Sales_Lead__c/fields/Detail_Summary__c.field-meta.xml
<CustomField>
    <fullName>Detail_Summary__c</fullName>
    <formula>LEFT(Lead_Detail_1__c, 30)&amp;&quot;...&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Summary</label>
    <type>Text</type>
</CustomField>