force-app/main/default/objects/Sales_Lead__c/fields/DGN_Target__c.field-meta.xml
<CustomField>
    <fullName>DGN_Target__c</fullName>
    <formula>Contact__r.Account.Target_DGN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Target</label>
    <type>Checkbox</type>
</CustomField>