force-app/main/default/objects/Sales_Lead__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Shows the email from the Contact record.</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the email from the Contact record.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>