force-app/main/default/objects/Sales_Lead__c/fields/Form_Company__c.field-meta.xml
<CustomField>
    <fullName>Form_Company__c</fullName>
    <description
  >Hidden field that stores the form data from when this lead was created.</description>
    <inlineHelpText
  >Hidden field that stores the form data from when this lead was created.</inlineHelpText>
    <label>Form - Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>