force-app/main/default/objects/Sales_Lead__c/fields/Form_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Last_Name__c</fullName>
    <description
  >Hidden field that stores the form data from when this lead was created.</description>
    <inlineHelpText
  >Hidden field that stores the form data from when this lead was created.</inlineHelpText>
    <label>Form - Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>