force-app/main/default/objects/Sales_Lead__c/fields/Last_Page_View__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_View__c</fullName>
    <description
  >Hidden field - shows a complete listing of every piece of activity that contributed to the contact becoming an MQL.</description>
    <inlineHelpText
  >Hidden field - shows a complete listing of every piece of activity that contributed to the contact becoming an MQL.</inlineHelpText>
    <label>Web Activity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>