force-app/main/default/objects/Sales_Lead__c/fields/Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Date__c</fullName>
    <description
  >The date the lead was originated for follow up.  Contact Us this will be the day of the form submission, for MQL it is the day they crossed the score threshold to become a lead.</description>
    <inlineHelpText
  >The date the lead was originated for follow up.  Contact Us this will be the day of the form submission, for MQL it is the day they crossed the score threshold to become a lead.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>