force-app/main/default/objects/Sales_Lead__c/fields/Lead_Detail_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Detail_3__c</fullName>
    <label>Lead Detail 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>