force-app/main/default/objects/Sales_Lead__c/fields/Lead_Name_Company__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name_Company__c</fullName>
    <formula
  >TEXT(MONTH(Lead_Date__c))&amp;&quot;-&quot;&amp;TEXT(DAY(Lead_Date__c))&amp;&quot; -- &quot;
&amp;&quot;  &quot;&amp;Contact__r.Full_Name__c &amp;&quot; -- &quot;&amp; Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name / Company</label>
    <type>Text</type>
</CustomField>