force-app/main/default/objects/Sales_Lead__c/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <description>Formerly Lead Notes</description>
    <inlineHelpText
  >Notes about why a lead was rejected, or what happened when contact was attempted.</inlineHelpText>
    <label>Alert Notes</label>
    <type>TextArea</type>
</CustomField>