force-app/main/default/objects/Sales_Lead__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description
  >Shows the lead score at the time that the MQL was created.</description>
    <inlineHelpText
  >Shows the lead score at the time that the MQL was created.</inlineHelpText>
    <label>Lead Score</label>
    <length>2</length>
    <type>Text</type>
</CustomField>