force-app/main/default/objects/Sales_Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description
  >Displays the source of the MQL record as having passed an activity threshold, or done an action that bypasses that threshold (trap).</description>
    <inlineHelpText
  >Displays the source of the MQL record as having passed an activity threshold, or done an action that bypasses that threshold (trap).</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MQL Threshold</fullName>
            </value>
            <value>
                <fullName>Trap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>