force-app/main/default/objects/Sales_Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description
  >All leads come in with a status of &quot;New&quot;.  convert to opportunities or reject leads through buttons on the lead page layout.</description>
    <inlineHelpText
  >All leads come in with a status of &quot;New&quot;.  convert to opportunities or reject leads through buttons on the lead page layout.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Alert</fullName>
                <default>true</default>
                <label>New Alert</label>
            </value>
            <value>
                <fullName>Sent to Sales</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
                <label>Dismissed</label>
            </value>
            <value>
                <fullName>Nurtured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>