force-app/main/default/objects/Sales_Lead__c/fields/Lead_Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title_Company__c</fullName>
    <formula>Title__c&amp;&quot; / &quot;  &amp;Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Title / Company</label>
    <type>Text</type>
</CustomField>