force-app/main/default/objects/Sales_Lead__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula
  >HYPERLINK(&quot;https://www.linkedin.com/search/results/index/?keywords=&quot;&amp;Contact__r.FirstName&amp;&quot; &quot;&amp;Contact__r.LastName&amp;&quot;%20&quot;&amp; Contact__r.Company_Name_Holder__c, &quot;Search on LinkedIn&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>