force-app/main/default/objects/Sales_Lead__c/fields/Log_a_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Call__c</fullName>
    <formula>HYPERLINK(

&quot;/00T/e?title=Call&amp;who_id=&quot;
&amp;Contact__r.Id&amp;
&quot;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&quot;
&amp;Id&amp;
&quot;&amp;RecordType=01230000000POXx&amp;ent=Task&amp;00N30000002ZgQV=Phone Call&quot;,
&quot;Log a Call&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log a Call</label>
    <type>Text</type>
</CustomField>