force-app/main/default/objects/Sales_Lead__c/fields/MQL_Actions__c.field-meta.xml
<CustomField>
    <fullName>MQL_Actions__c</fullName>
    <formula>CASE( Lead_Status__c,
&quot;New&quot;,
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;?convert=1&quot;, &quot;Convert&quot;)
&amp;&quot;  |  &quot;
&amp;HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;?reject=1&quot;, &quot;Reject&quot;)
&amp;&quot;  |  &quot;
&amp;HYPERLINK(&quot;/&quot;&amp;Id, &quot;View Activity Alert&quot;)
,
HYPERLINK(&quot;/&quot;&amp;Id, &quot;View Activity Alert&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Alert Actions</label>
    <type>Text</type>
</CustomField>