force-app/main/default/objects/Sales_Lead__c/fields/MQL_Name__c.field-meta.xml
<CustomField>
    <fullName>MQL_Name__c</fullName>
    <formula>Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Alert Name</label>
    <type>Text</type>
</CustomField>