force-app/main/default/objects/Sales_Lead__c/fields/Notes_from_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Marketing__c</fullName>
    <label>Notes from Marketing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>