force-app/main/default/objects/Sales_Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Shows the opportunity that this Sales Lead converted into.</description>
    <inlineHelpText
  >Shows the opportunity that this Sales Lead converted into.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>