force-app/main/default/objects/Sales_Lead__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Shows the organization from the Contact record.</description>
    <formula>Contact__r.Company_Name_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the organization from the Contact record.</inlineHelpText>
    <label>Organization</label>
    <type>Text</type>
</CustomField>