force-app/main/default/objects/Sales_Lead__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Shows the phone from the Contact record.</description>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the phone from the Contact record.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>