force-app/main/default/objects/Sales_Lead__c/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The primary campaign that influenced this form submission, usually from an email.</description>
    <inlineHelpText
  >The primary campaign that influenced this form submission, usually from an email.</inlineHelpText>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>