force-app/main/default/objects/Sales_Lead__c/fields/Qualified_By__c.field-meta.xml
<CustomField>
    <fullName>Qualified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MQLs</relationshipName>
    <type>Lookup</type>
</CustomField>