force-app/main/default/objects/Sales_Lead__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>