force-app/main/default/objects/Sales_Lead__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <formula>DATEVALUE( Rejected_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>