force-app/main/default/objects/Sales_Lead__c/fields/Rejected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date_Time__c</fullName>
    <label>Change Date/Time</label>
    <type>DateTime</type>
</CustomField>