force-app/main/default/objects/Sales_Lead__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description
  >Choose a reason why this lead is not being converted into an opportunity.</description>
    <inlineHelpText
  >Choose a reason why this lead is not being converted into an opportunity.</inlineHelpText>
    <label>Dismiss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already a strategic partner</fullName>
            </value>
            <value>
                <fullName>Not a sales lead</fullName>
            </value>
            <value>
                <fullName>Already working with this account</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
            <value>
                <fullName>Not in USA</fullName>
            </value>
            <value>
                <fullName>Nurturing in Campaign(s)</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>