force-app/main/default/objects/Sales_Lead__c/fields/Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activity__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot;&amp;
Contact__r.Id&amp;
&quot;#&quot;&amp;
Contact__r.Id&amp;
&quot;_RelatedHistoryList_target&quot;,
&quot;View Sales Activity History&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Activity</label>
    <type>Text</type>
</CustomField>