force-app/main/default/objects/Sales_Lead__c/fields/Send_an_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_an_Email__c</fullName>
    <formula
  >HYPERLINK(&quot;mailto:&quot;&amp;Contact__r.Email, &quot;Send an Email&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send an Email</label>
    <type>Text</type>
</CustomField>