force-app/main/default/objects/Sales_Lead__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Shows the title from the Contact record.</description>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the title from the Contact record.</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>