force-app/main/default/objects/Sales_Lead__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description
  >OneForm Transaction Id of the form submission that generated this Sales Lead.</description>
    <inlineHelpText
  >OneForm Transaction Id of the form submission that generated this Sales Lead.</inlineHelpText>
    <label>Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>