force-app/main/default/objects/Sales_Lead__c/fields/TW_Target__c.field-meta.xml
<CustomField>
    <fullName>TW_Target__c</fullName>
    <formula>Contact__r.Account.Target_TW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TW Target</label>
    <type>Checkbox</type>
</CustomField>