force-app/main/default/objects/Sales_Lead__c/fields/Web_Activity_Summary__c.field-meta.xml
<CustomField>
    <fullName>Web_Activity_Summary__c</fullName>
    <description
  >Shows a summary of the most recent web activity for this MQL. More history may be available under &quot;View on CMS&quot;.</description>
    <inlineHelpText
  >Shows a summary of the most recent web activity for this MQL. More history may be available under &quot;View on CMS&quot;.</inlineHelpText>
    <label>Web Activity Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>