force-app/main/default/objects/Sales_Lead__c/recordTypes/Contact_Us.recordType-meta.xml
<RecordType>
    <fullName>Contact_Us</fullName>
    <active>true</active>
    <description>Contact Us form submitted on our website.</description>
    <label>Contact Us</label>
</RecordType>