force-app/main/default/objects/Sales_Lead__c/recordTypes/MQL_Pre_Qualify.recordType-meta.xml
<RecordType>
    <fullName>MQL_Pre_Qualify</fullName>
    <active>true</active>
    <label>Activity Alert</label>
</RecordType>