force-app/main/default/objects/Sales_Lead__c/recordTypes/Trial_Request.recordType-meta.xml
<RecordType>
    <fullName>Trial_Request</fullName>
    <active>true</active>
    <label>Trial Request</label>
</RecordType>