force-app/main/default/objects/Sales_Lead__c/listViews/New_Alert.listView-meta.xml
<ListView>
    <fullName>New_Alert</fullName>
    <columns>NAME</columns>
    <columns>MQL_Name__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Title__c</columns>
    <columns>Organization__c</columns>
    <columns>Lead_Date__c</columns>
    <columns>Web_Activity_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>New Alert</value>
    </filters>
    <label>New Alert</label>
</ListView>