force-app/main/default/objects/Sales_Lead__c/listViews/Sent_to_Sales_Inside_Sales.listView-meta.xml
<ListView>
    <fullName>Sent_to_Sales_Inside_Sales</fullName>
    <columns>NAME</columns>
    <columns>MQL_Name__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Title__c</columns>
    <columns>Organization__c</columns>
    <columns>Lead_Date__c</columns>
    <columns>Web_Activity_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>Sent to Sales</value>
    </filters>
    <filters>
        <field>Sales_Team__c</field>
        <operation>equals</operation>
        <value>GT Inside Sales</value>
    </filters>
    <label>Sent to Sales - Inside Sales</label>
</ListView>